# energy-consumption-forecasting

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
app/: main.py
energy_consumption.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: 01_eda_and_baseline.ipynb
scripts/: run_pipeline.py
src/: config.py  data_quality.py  features.py  ingest.py  logger.py  preprocess.py  train.py  tune.py
tests/: conftest.py  test_api.py  test_data_quality.py  test_features.py  test_ingest.py  test_preprocess.py  test_train.py  test_tune.py
