[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "energy_consumption"
version = "0.1.0"
description = "End-to-end Time Series Energy Consumption MLOps Pipeline"
dependencies = [
    "requests",
    "pandas",
    "pyarrow",
    "python-dotenv",
    "jupyter",
    "matplotlib",
    "seaborn",
    "scipy",          
    "statsmodels" ,
    "scikit-learn" ,
    "pmdarima",
    "xgboost",
    "torch",
    "meteostat"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]