[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "energy_consumption"
version = "0.1.0"
description = "End-to-end Time Series Energy Consumption MLOps Pipeline"
requires-python = ">=3.10"

dependencies = [
    # Data & ML
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "joblib>=1.3.0",
    "holidays>=0.46",
    # Config & logging
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    # API service
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Experiment tracking & tuning
    "mlflow>=2.10.0",
    "optuna>=3.0.0",
    # Visualisation (notebooks only)
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.14.0",
    "pmdarima>=2.0.0",
    "torch>=2.0.0",
    "meteostat>=1.15.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "black>=23.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# Pytest konfigürasyonu
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"